--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300;400;500;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300;400;500;700;900&display=swap"
       rel="stylesheet"
     />
     <title>Yumemi</title>
@@ -19,6 +19,9 @@
   <style>
     * {
       font-family: "Noto Sans JP", sans-serif;
+      box-sizing: border-box;
+      padding: 0;
+      margin: 0;
     }
   </style>
   <body>
