--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
   </head>
   <style>
     * {
-      font-family: "Noto Sans JP", sans-serif;
+      font-family: 'Noto Sans JP', sans-serif;
       box-sizing: border-box;
       padding: 0;
       margin: 0;
